# inherent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  docker-compose.release.yml  docker-compose.yml  mkdocs.yml
services/inh-contracts/: Readme.md  pyproject.toml
services/inh-contracts/src/inh_contracts/: __init__.py  events.py  naming.py
services/inh-contracts/tests/: test_events.py  test_naming.py
services/inh-ingestion-svc/: .gitignore  Dockerfile  Readme.md  pyproject.toml
services/inh-ingestion-svc/config/: sources.yaml.example
services/inh-ingestion-svc/scripts/: backfill_versions.py  migrate_schema.py  migrate_weaviate.py  publish_test_message.py  run_migrations.sh  setup_env.py  test_temporal.py
services/inh-ingestion-svc/scripts/migrations/: 000_initial_schema.sql  001_consolidated_schema.sql  002_multi_tenancy.sql  003_user_scoped_api_keys.sql  004_document_versioning.sql  005_ingestion_staging.sql  006_chunk_edit_event_type.sql  007_drop_versioning.sql  008_chunk_provenance.sql  009_freshness.sql  010_document_content_hash.sql  011_workspace_stats_ledger.sql  012_workspace_tenant_fk.sql  013_dead_letter_dedup.sql  014_ingestion_events.sql  015_evals.sql  README.md
services/inh-ingestion-svc/src/: __init__.py  main.py
services/inh-ingestion-svc/src/api/: __init__.py  app.py  auth.py
services/inh-ingestion-svc/src/config/: settings.py
services/inh-ingestion-svc/src/connectors/: __init__.py  base.py  filesystem.py
services/inh-ingestion-svc/src/models/: document.py
services/inh-ingestion-svc/src/services/: audit_consumer.py  audit_mongo_writer.py  database.py  embedder.py  metrics.py  migrations.py  processor.py  quality.py  staging.py  storage.py  tenant_manager.py  weaviate.py
services/inh-ingestion-svc/src/temporal/: __init__.py  lineage.py  models.py  shared_services.py  trigger.py  worker.py
services/inh-ingestion-svc/src/utils/: logger.py
services/inh-ingestion-svc/tests/: conftest.py  test_api.py  test_audit_consumer.py  test_backpressure_dead_letter.py  test_chunk_config_resolution.py  test_chunk_edit_activity.py  test_chunk_offsets.py  test_chunking_config.py  test_completion_notification.py  test_connectors.py  test_contracts.py  test_database.py  test_database_extended.py  test_dead_letter.py  test_dead_letter_dedup.py  test_embedder.py  test_extraction_by_type.py  test_fetch_activity.py  test_fk_migration.py  test_image_ocr.py  test_integration.py  test_lineage.py  test_logger_env.py  test_metrics.py  test_migrations.py  test_models.py  test_mq_base.py  test_mq_reclaim.py  test_mq_redis.py  test_multi_tenancy.py  test_naming_contract.py  test_pending_document.py  test_processor.py  test_processor_backend.py  test_processor_extraction.py  test_quality.py  test_staging.py  test_staging_jsonb_cast.py  test_storage.py  test_storage_advanced.py  (+14 more)
services/inh-ingestion-svc/tests/benchmark/: benchmark_report.py  conftest.py  test_benchmark_report.py  test_ingestion_throughput.py
services/inh-ingestion-svc/tests/evals/: __init__.py  conftest.py  test_extraction_chunking_quality.py
services/inh-ingestion-svc/tests/failure_injection/: __init__.py  conftest.py  test_database_failures.py  test_embedder_failures.py  test_redis_mq_failures.py  test_storage_failures.py  test_weaviate_failures.py
services/inh-ingestion-svc/tests/temporal/: test_audit_workflow.py
services/inh-public-api-svc/: .pre-commit-config.yaml  Dockerfile  Readme.md  pyproject.toml
services/inh-public-api-svc/src/: __init__.py  main.py
services/inh-public-api-svc/src/api/: router.py
services/inh-public-api-svc/src/config/: __init__.py  constants.py  settings.py
services/inh-public-api-svc/src/core/: __init__.py  exceptions.py  problem_details.py  rate_limiter.py
services/inh-public-api-svc/src/mcp/: server.py
services/inh-public-api-svc/src/mcp_server/: server.py
services/inh-public-api-svc/src/middleware/: __init__.py  audit_logging.py  authentication.py  error_handler.py  rate_limiting.py  request_context.py  security_headers.py
services/inh-public-api-svc/src/models/: __init__.py  api_key.py  citation.py  document.py  errors.py  evals.py  health.py  search.py
services/inh-public-api-svc/src/services/: __init__.py  audit_publisher.py  auth.py  compensation.py  context_window.py  database.py  deletion.py  document_intake.py  embedder.py  eval_capture.py  eval_feedback.py  eval_runner.py  eval_scorecard.py  lineage.py  metrics.py  mongo_client.py  mq.py  quality_gate.py  ranking_metrics.py  search.py  storage.py  verify.py
services/inh-public-api-svc/src/utils/: __init__.py  logger.py  validators.py
services/inh-public-api-svc/tests/: __init__.py  conftest.py  test_api_key_auth.py
services/inh-public-api-svc/tests/benchmark/: conftest.py  run_search_benchmark.py  test_search_latency_throughput.py
services/inh-public-api-svc/tests/contract/: __init__.py  conftest.py  test_evals_contract.py  test_failure_parity.py  test_mcp_contract.py  test_rest_contract.py
services/inh-public-api-svc/tests/e2e/: conftest.py  test_api_flows.py
services/inh-public-api-svc/tests/evals/: __init__.py  conftest.py  eval_gate.py  test_advanced_index_gate.py  test_citation_support.py  test_compose_retrieval_regression.py  test_eval_gate.py  test_evals_flywheel.py  test_ranking_metrics_offline.py  test_retrieval_quality_modes.py
services/inh-public-api-svc/tests/integration/: __init__.py  test_api_path.py  test_compose_integration.py  test_health_endpoints.py  test_middleware_order.py  test_rate_limiting.py  test_singleton_isolation.py
services/inh-public-api-svc/tests/security/: __init__.py  conftest.py  test_auth_regression.py  test_context_window_authorization.py  test_mcp_workspace_boundaries.py  test_release_compose_hardening.py  test_workspace_isolation.py
services/inh-public-api-svc/tests/services/: test_audit_publisher.py
services/inh-public-api-svc/tests/unit/: __init__.py  test_auth_service.py  (+55 more)
(+147 files in other folders)
