[project]
name = "inh-contracts"
version = "2.0.0"
description = "Shared contracts (Weaviate naming + versioned event schemas) consumed by the ingestion and public-api services"
readme = "Readme.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
]

[project.optional-dependencies]
# Dev tooling versions are normalized across all three services (M7 #21).
# See docs/developer/dependencies.md for the shared pin policy.
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "black==24.10.0",
    "ruff==0.14.10",
    "mypy==1.19.1",
    "bandit[toml]==1.9.3",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inh_contracts"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
markers = [
    "contract: contract/schema regression tests for shared event + naming surfaces",
    "unit: fast isolated unit tests",
]

# Mirrors [project.optional-dependencies].dev so `uv sync --extra dev --group dev`
# resolves to the same normalized pins regardless of which flag is used (M7 #21).
[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "black==24.10.0",
    "ruff==0.14.10",
    "mypy==1.19.1",
    "bandit[toml]==1.9.3",
    "pre-commit>=3.6.0",
]
