[project]
name = "inh-ingestion-svc"
version = "0.3.0"
description = "Document ingestion service with multi-tenancy for processing and storing documents in PostgreSQL and Weaviate"
readme = "Readme.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "weaviate-client>=4.0.0",
    # Message queue (Valkey / Redis Streams)
    "redis>=5.0.0",
    "pypdf>=3.0.0",
    "python-docx>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "boto3>=1.34.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    # Temporal for workflow orchestration
    "temporalio>=1.9.0",
    # Standalone HTTP API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # Metrics
    "prometheus-client>=0.19.0",
    "motor>=3.7.1",
    "packaging>=24.0",
]

[project.optional-dependencies]
# Optional OCR support for PNG image uploads. Requires BOTH this extra and the
# 'tesseract' system binary (e.g. apt-get install tesseract-ocr). When absent,
# image extraction falls back gracefully to a placeholder (see extract.py).
ocr = [
    "pytesseract>=0.3.10",
    "pillow>=10.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing"
markers = [
    "failure_injection: intentional dependency-failure tests",
    "eval: fixture-backed extraction/chunking quality evaluations",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/__pycache__/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
precision = 1
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
]
