[project]
name = "inh-ingestion-svc"
version = "0.5.0"
description = "Document ingestion service with multi-tenancy for processing and storing documents in PostgreSQL and Weaviate"
readme = "Readme.md"
requires-python = ">=3.11"
dependencies = [
    "inh-contracts",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "weaviate-client>=4.0.0",
    # Message queue (Valkey / Redis Streams)
    "redis>=5.0.0",
    "pypdf>=3.0.0",
    "python-docx>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "boto3>=1.34.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    # Temporal for workflow orchestration
    "temporalio>=1.9.0",
    # Standalone HTTP API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # Metrics
    "prometheus-client>=0.19.0",
    "motor>=3.7.1",
    "packaging>=24.0",
]

[project.optional-dependencies]
# Optional OCR support for PNG image uploads. Requires BOTH this extra and the
# 'tesseract' system binary (e.g. apt-get install tesseract-ocr). When absent,
# image extraction falls back gracefully to a placeholder (see extract.py).
ocr = [
    "pytesseract>=0.3.10",
    "pillow>=10.0.0",
]
# Dev tooling versions are normalized across all three services (M7 #21).
# See docs/developer/dependencies.md for the shared pin policy.
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "black==24.10.0",
    "ruff==0.14.10",
    "mypy==1.19.1",
    "bandit[toml]==1.9.3",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
inh-contracts = { path = "../inh-contracts" }

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing -m 'not compose'"
markers = [
    "failure_injection: intentional dependency-failure tests",
    "eval: fixture-backed extraction/chunking quality evaluations",
    "benchmark: latency/throughput benchmarks (loose SLO regression guards)",
    "compose: requires a running docker-compose stack (deselected by default)",
    "unit: fast isolated unit tests",
    "integration: tests that exercise real service dependencies",
    "slow: slow-running tests",
    "security: auth/tenancy security regression tests (offline)",
    "contract: schema/contract regression tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/__pycache__/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
precision = 1
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
]

# Mirrors [project.optional-dependencies].dev so `uv sync --extra dev --group dev`
# resolves to the same normalized pins regardless of which flag is used (M7 #21).
[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "black==24.10.0",
    "ruff==0.14.10",
    "mypy==1.19.1",
    "bandit[toml]==1.9.3",
    "pre-commit>=3.6.0",
]
